@@ -54,7 +54,7 @@
  * in re-enabling affected modules.
  */
 
-#define CL_FLEVEL 70
+#define CL_FLEVEL 71
 #define CL_FLEVEL_DCONF	CL_FLEVEL
 #define CL_FLEVEL_SIGTOOL CL_FLEVEL
 
