@@ -93,6 +93,7 @@
 #include "swf.h"
 #include "jpeg.h"
 #include "png.h"
+#include "iso9660.h"
 
 #ifdef HAVE_BZLIB_H
 #include <bzlib.h>
@@ -1879,7 +1880,7 @@ static int cli_scanraw(cli_ctx *ctx, cli_file_t type, uint8_t typercg, cli_file_
 {
 	int ret = CL_CLEAN, nret = CL_CLEAN;
 	struct cli_matched_type *ftoffset = NULL, *fpt;
-	uint32_t lastzip, lastrar;
+	uint32_t lastrar;
 	struct cli_exe_info peinfo;
 	unsigned int acmode = AC_SCAN_VIR, break_loop = 0;
 	fmap_t *map = *ctx->fmap;
@@ -1901,7 +1902,7 @@ static int cli_scanraw(cli_ctx *ctx, cli_file_t type, uint8_t typercg, cli_file_
 	perf_nested_start(ctx, PERFT_RAWTYPENO, PERFT_SCAN);
 	ctx->recursion++;
 	if(nret != CL_VIRUS) {
-	    lastzip = lastrar = 0xdeadbeef;
+	    lastrar = 0xdeadbeef;
 	    fpt = ftoffset;
 	    while(fpt) {
 		if(fpt->offset) switch(fpt->type) {
@@ -1937,6 +1938,15 @@ static int cli_scanraw(cli_ctx *ctx, cli_file_t type, uint8_t typercg, cli_file_
 			    ctx->container_size = map->len - fpt->offset; /* not precise */
 			    cli_dbgmsg("ARJ-SFX signature found at %u\n", (unsigned int) fpt->offset);
 			    nret = cli_scanarj(map->fd, ctx, fpt->offset, &lastrar);
+			}
+			break;
+
+		    case CL_TYPE_ISO9660:
+			if(SCAN_ARCHIVE && (DCONF_ARCH & ARCH_CONF_ISO9660)) {
+			    ctx->container_type = CL_TYPE_ISO9660;
+			    ctx->container_size = map->len - fpt->offset; /* not precise */
+			    cli_dbgmsg("ISO9660 signature found at %u\n", (unsigned int) fpt->offset);
+			    nret = cli_scaniso(ctx, fpt->offset);
 			}
 			break;
 
